<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:elevation="10dp">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            app:cardBackgroundColor="@color/primary"
            app:cardCornerRadius="10dp"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/save_text_description">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="5dp"
                        android:background="@drawable/bg_input_text"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/save_image"
                            android:layout_width="150dp"
                            android:layout_height="100dp"
                            android:scaleType="centerCrop"
                            tools:srcCompat="@drawable/virgil_abloh_nike" />

                        <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent">

                                <TextView
                                    android:id="@+id/save_choose_image"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="sans-serif-smallcaps"
                                    android:text="@string/save_choose_image"
                                    android:textAlignment="center"
                                    android:textColor="@color/white"
                                    android:textSize="15sp" />

                                <android.support.v7.widget.CardView
                                    android:layout_width="match_parent"
                                    android:layout_height="match_parent"
                                    app:cardCornerRadius="10dp"
                                    app:cardElevation="5dp"
                                    app:cardUseCompatPadding="true">

                                    <Button
                                        android:id="@+id/button"
                                        android:layout_width="match_parent"
                                        android:layout_height="match_parent"
                                        android:layout_gravity="center"
                                        android:background="@android:color/transparent"
                                        android:fontFamily="sans-serif-smallcaps"
                                        android:text="@string/save_button_select"
                                        android:textAlignment="center"
                                        android:textColor="#1976D2"
                                        android:textSize="15dp" />
                                </android.support.v7.widget.CardView>

                            </LinearLayout>

                        </android.support.constraint.ConstraintLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="5dp"
                        android:divider="@drawable/empty_divider"
                        android:orientation="vertical"
                        android:showDividers="middle">

                        <TextView
                            android:id="@+id/save_title_category"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-smallcaps"
                            android:text="@string/save_title_category"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                        <Spinner
                            android:id="@+id/save_input_category"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_input_text"
                            android:ems="10"
                            android:fontFamily="sans-serif-smallcaps"
                            android:textColor="@android:color/white" />

                        <EditText
                            android:id="@+id/save_input_designation"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_input_text"
                            android:ems="10"
                            android:fontFamily="sans-serif-smallcaps"
                            android:inputType="textPersonName"
                            android:text="@string/save_input_designation"
                            android:textColor="@android:color/white" />

                        <EditText
                            android:id="@+id/save_input_price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_input_text"
                            android:ems="10"
                            android:fontFamily="sans-serif-smallcaps"
                            android:inputType="number"
                            android:text="@string/save_input_price"
                            android:textColor="@android:color/white" />

                        <TextView
                            android:id="@+id/save_title_size"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="sans-serif-smallcaps"
                            android:text="@string/save_title_size"
                            android:textColor="@color/white"
                            android:textSize="12sp" />

                        <Spinner
                            android:id="@+id/save_input_size"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/bg_input_text"
                            android:ems="10"
                            android:fontFamily="sans-serif-smallcaps"
                            android:textColor="@android:color/white" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/save_button_cancel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/bg_input_button"
                            android:fontFamily="sans-serif-smallcaps"
                            android:text="@string/save_button_cancel"
                            android:textAlignment="center"
                            android:layout_marginRight="10dp"
                            android:textColor="#1976D2"
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/save_button_save"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/bg_input_button"
                            android:fontFamily="sans-serif-smallcaps"
                            android:text="@string/save_button_save"
                            android:textAlignment="center"
                            android:textColor="#1976D2"
                            android:textSize="16sp" />
                    </LinearLayout>

                </LinearLayout>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

        <TextView
            android:id="@+id/save_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/save_title"
            android:textColor="@color/primary"
            android:textSize="23sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/save_text_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:text="@string/save_text_description"
            android:textColor="@color/black"
            android:textSize="10sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/save_title" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>